[update] update documentation
